--- a/index3.html
+++ b/index3.html
@@ -106,10 +106,13 @@
                         </div>
                         </div>
                          <div class="section-image">
-                          <img src="./image/hotel-1.jpg" width="228px" height="160px" alt="">
-                           <img src="./image/hotel-2.jpg" width="228px" height="160px"  alt="">
-                           <img src="./image/hotel-3.jpg" width="230px" height="160px"  alt="">
-                        </div>  
+                          <img src="./image/hotel-1.jpg" width="240px" height="160px" alt="">
+                           <img src="./image/hotel-2.jpg" width="240px" height="160px"  alt="">
+                           <img src="./image/hotel-3.jpg" width="246px" height="160px"  alt="">
+                        </div> 
+                        <div>
+                            
+                        </div> 
                     </div>
                 <div class="section3">
                      <h6>HOTEL LAS PALMAS</h6>
